bin/tests/snapshots/inherit_ordering__763ef17a40d534f7035107de6dff48f6_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit
    apple
    DOMAIN
    Banana
    _module
    ;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,8 @@
 {
   inherit
-    apple
+    Banana
     DOMAIN
-    Banana
     _module
+    apple
     ;
 }
