bin/tests/snapshots/inherit_ordering__763ef17a40d534f7035107de6dff48f6_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit
    apple
    DOMAIN
    Banana
    _module
    ;
}
---
<temp_file_path>>4:5:W:39:[inherit_ordering] `DOMAIN` is out of alphabetical order
