bin/tests/snapshots/inherit_ordering__763ef17a40d534f7035107de6dff48f6_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit
    apple
    DOMAIN
    Banana
    _module
    ;
}
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:4:5 ]
   │
 4 │     DOMAIN
   │     ───┬──  
   │        ╰──── DOMAIN is out of alphabetical order
───╯
