bin/tests/snapshots/inherit_ordering__8792caf8cb90fdcfd473dd27ceed3e22_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    mkEnableOption
    mkIf
    mkMerge
    mkOption
    mkPackageOption
    ;
}
---
