bin/tests/snapshots/inherit_ordering__8a9dcbd141587f72fec6ecc02eacac6d_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit lib pkgs inputs; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit lib pkgs inputs; }
+{ inherit inputs lib pkgs; }
