bin/tests/snapshots/inherit_ordering__8a9dcbd141587f72fec6ecc02eacac6d_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit lib pkgs inputs; }
---
<temp_file_path>>1:20:W:39:[inherit_ordering] `inputs` is out of alphabetical order
