bin/tests/snapshots/inherit_ordering__8a9dcbd141587f72fec6ecc02eacac6d_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit lib pkgs inputs; }
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:1:20 ]
   │
 1 │ { inherit lib pkgs inputs; }
   │                    ───┬──  
   │                       ╰──── inputs is out of alphabetical order
───╯
