bin/tests/snapshots/inherit_ordering__c0f2a4fd94c9adb927f6985744cf7f6d_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit b a; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit b a; }
+{ inherit a b; }
