bin/tests/snapshots/inherit_ordering__c0f2a4fd94c9adb927f6985744cf7f6d_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit b a; }
---
<temp_file_path>>1:13:W:39:[inherit_ordering] `a` is out of alphabetical order
