bin/tests/snapshots/inherit_ordering__c0f2a4fd94c9adb927f6985744cf7f6d_lint_json.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit b a; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_ordering",
      "note": "Inherited names are not in alphabetical order",
      "code": 39,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 13
            },
            "to": {
              "line": 1,
              "column": 14
            }
          },
          "message": "`a` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 3
              },
              "to": {
                "line": 1,
                "column": 15
              }
            },
            "fix": "inherit a b;"
          }
        }
      ]
    }
  ]
}
